--- a/spring-cloud-auth/spring-cloud-auth-server/pom.xml
+++ b/spring-cloud-auth/spring-cloud-auth-server/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>joda-time</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.spring.cloud.servers</groupId>
+            <artifactId>spring-cloud-auth-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>de.codecentric</groupId>
