--- a/spring-cloud-auth/spring-cloud-auth-common/pom.xml
+++ b/spring-cloud-auth/spring-cloud-auth-common/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.spring.cloud.servers</groupId>
+            <artifactId>spring-cloud-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
