--- a/spring-cloud-netty/pom.xml
+++ b/spring-cloud-netty/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>spring-cloud-netty-server</module>
         <module>spring-cloud-netty-client</module>
+        <module>spring-cloud-netty-common</module>
     </modules>
 
     <dependencies>
@@ -60,6 +61,17 @@
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>3.5.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.dyuproject.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dyuproject.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.0.8</version>
         </dependency>
     </dependencies>
 </project>
