--- a/spring-cloud-netty/spring-cloud-netty-server/pom.xml
+++ b/spring-cloud-netty/spring-cloud-netty-server/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>spring-cloud-netty-server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.spring.cloud.servers</groupId>
+            <artifactId>spring-cloud-netty-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <finalName>spring-cloud-netty-server</finalName>
         <plugins>
